--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "prettier-plugin-svelte": "^2.8.1",
         "svelte": "^3.59.2",
         "svelte-check": "^3.0.1",
+        "svelte-icons": "^2.1.0",
+        "swiper": "^8.4.7",
         "tailwindcss": "^3.3.2",
         "three": "^0.153.0",
         "three-globe": "^2.27.2",
@@ -35,8 +37,5 @@
         "typescript": "^5.0.0",
         "vite": "^4.3.0"
     },
-    "type": "module",
-    "dependencies": {
-        "swiper": "^8.4.7"
-    }
+    "type": "module"
 }
