--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "@poppanator/sveltekit-svg": "^3.0.1",
         "@sveltejs/adapter-auto": "^2.0.0",
+        "@sveltejs/adapter-netlify": "^1.0.0-next.88",
         "@sveltejs/kit": "^1.5.0",
         "@types/three": "^0.152.1",
         "@typescript-eslint/eslint-plugin": "^5.45.0",
